Reduce layout shift, simply code, and fix #19
FIXES https://todo.sr.ht/~boehs/boehs/19

--- a/src/_public/main.scss
+++ b/src/_public/main.scss
@@ -50,7 +50,7 @@ body {
 
   & > div {
     padding: 75px 0;
-    max-width: 600px;
+    width: min(600px,100%);
   }
 }
 
@@ -78,8 +78,7 @@ img {
 }
 
 hr {
-  border-style: none;
-  border-width: 0;
+  border: none;
   text-align: center;
   width: 100%;
 
@@ -188,6 +187,10 @@ button,
   &:hover {
     background-color: var(--activer);
   }
+}
+
+article > p,footer {
+  line-height: 1.5;
 }
 
 legend,
